# beast

./: .autom4te.cfg  .cvsignore  .gitattributes  .gitignore  .travis.docker  .travis.yml  AUTHORS  BEASTconfig.h.in  COPYING  COPYING.LIB  ChangeLog  HACKING.md  MAINTAINERS  Makefile.am  Makefile.decl  Makefile.mk  NEWS  NEWS.md  PKG_config.h.in  PKG_paths.h  README  README.md  TODO  acbeast.m4  acconfig.h  aclocal.m4  autogen.sh  beast.doap  bse.pc.in  buildtool.sh  config-checks.mk  config-uname.mk  config-utils.mk  config.h  configure  configure.ac  configure.in  git-version.sh  ltmain.sh  mkinstalldirs  (+8 more)
beast-gtk/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.mk  TODO  beast.glr  bstactivatable.c  bstactivatable.h  bstapi.idl  bstapp.c  bstapp.cc  bstapp.h  bstapp.hh  bstappcontrol.c  bstappcontrol.h  bstasciipixbuf.c  bstasciipixbuf.cc  bstasciipixbuf.h  bstasciipixbuf.hh  bstauxdialogs.c  bstauxdialogs.cc  bstauxdialogs.h  bstauxdialogs.hh  bstbseutils.c  bstbseutils.cc  bstbseutils.h  bstbseutils.hh  bstbuseditor.c  bstbuseditor.cc  bstbuseditor.h  bstbuseditor.hh  bstbusmixer.c  bstbusmixer.cc  bstbusmixer.h  bstbusmixer.hh  bstbusview.c  bstbusview.cc  bstbusview.h  bstbusview.hh  (+364 more)
birnet/: .cvsignore  .gitignore  ChangeLog  Makefile.am  birnet-zintern.c  birnet-zintern.cc  birnet.h  birnet.hh  birnetcdefs.h  birnetcore.c  birnetcore.cc  birnetcore.h  birnetcpu.c  birnetcpu.cc  birnetcpu.h  birnetcpu.hh  birnetdebugtools.cc  birnetdebugtools.hh  birnetmath.cc  birnetmath.hh  birnetmsg.c  birnetmsg.cc  birnetmsg.h  birnetmsg.hh  birnetring.c  birnetring.h  birnetsignal.cc  birnetsignal.hh  birnetsignalslot.hh  birnetsignaltemplate.hh  birnettests.h  birnetthread.c  birnetthread.cc  birnetthread.h  birnetthread.hh  birnetthreadimpl.cc  birnetthreadxx.cc  birnetthreadxx.hh  birnetutf8.cc  birnetutf8.hh  (+8 more)
blib/: .cvsignore  ChangeLog  Makefile.am  bhashmap.c  bhashmap.h  blib.h  blibconfig.h.in  bmain.c  bmain.h  bparam.c  bparam.h  btype.c  btype.h  glib-extra.c  glib-extra.h  glib-genums.c  glib-genums.h  glib-gobject.c  glib-gobject.h  glib-gparam.c  glib-gparam.h  glib-gparamspecs.c  glib-gparamspecs.h  glib-gtype.c  glib-gtype.h  glib-gvalue.c  glib-gvalue.h  glib-gvaluecollector.h  glib-includes.h  testtypes.c
bse/: .cvsignore  .gitignore  AuxTypes.py  COPYING  COPYING.LIB  ChangeLog  GNUmakefile  Makefile.am  Makefile.mk  TODO  backtrace.cc  backtrace.hh  bcore.cc  bcore.hh  beast-sound-engine.cc  beast-sound-engine.hh  blepsynth.cc  blob.cc  blob.hh  bse-internals.hh  bse.h  bse.hh  bse.idl  bseamplifier-aux.c  bseamplifier.c  bseamplifier.cc  bseamplifier.h  bseamplifier.idl  bseapi-inserts.hh  bseapi-inserts.inc.hh  bseapi.idl  bseautodoc.c  bseautodoc.cc  bsebasics.cc  bsebasics.idl  bsebindata.c  bsebindata.h  bsebiquadfilter.c  bsebiquadfilter.cc  bsebiquadfilter.h  (+817 more)
bsw/: .cvsignore  Makefile.am  bsw.h  bswcxxutils.h  bswglue.c  bswglue.h  bswproxy.c  bswproxy.h  bswsignal.c  bswsignal.h  mkapi.c  testbsw.c
bsw-shell/: .cvsignore  Makefile.am  bse-scm-glue.boot  bsw-boilerplate.scm.x  bswscmhandle.c  bswscmhandle.h  bswscminterp.c  bswscminterp.h  bswshell.c  mkglue.c  progressor-example.scm  record-midi.scm  test.scm
data/: .cvsignore  .gitignore  Makefile.am  Makefile.mk  beast.applications  beast.applications.in  beast.desktop.in  beast.xml.in  bse.keys.in  bse.mime  bse.pc.in  sfi.pc.in
docs/: .cvsignore  .gitignore  ChangeLog.svn  Makefile.am  Makefile.doxygen  Makefile.mk  OldSfi.ChangeLog  WRITING.3.texi  architecture.doxi  architecture.texi  beast-components.dia  beast-index.doxi  beast-index.html  beast-index.texi  beast-progs.dia  beast.1.doxi  beast.1.md  beast.1.texi  beastdefs.doxi  bse-categories.txt  bse-concept.txt  bse-data-v1.txt  bse-ep-net.txt  bse-heart.txt  bse-networks.txt  bse-plugin-generator.1.texi  bse-pool-sources.txt  bse-typesystem.txt  bse.5.doxi  bse.5.md  bsescm.1.doxi  bsescm.1.md  bsesh.1.doxi  bsesh.1.texi  bsewavetool.1.doxi  bsewavetool.1.md  ch-appendix.md  ch-background.md  ch-formats.md  ch-historic.md  (+62 more)
drivers/: Makefile.am  Makefile.mk  bsemididevice-alsa.c  bsemididevice-alsa.cc  bsemididevice-alsa.h  bsemididevice-alsa.hh  bsepcmdevice-alsa.c  bsepcmdevice-alsa.cc  bsepcmdevice-alsa.h  bsepcmdevice-alsa.hh  bsepcmdevice-jack.cc  bsepcmdevice-jack.hh
ebeast/: .eslintrc.js  .gitignore  Makefile.am  Makefile.mk  Makefile.sub  app.html  app.js  app.less  app.scss  babel.config.js  chromatic-sass2.js  cssaux.scss  fix-scss.diff  fix-vue-ccu.diff  index.html  jsbse.js  main.js  markdown-it.esm0.js  markdown-it.rollup.js  menus.js  package.json.in  rollup.config.js  scrollbar.scss  theme.scss  util.js  utilities.js  variables.scss  vue.rollup.js  window.html
launchers/: .cvsignore  .gitignore  Makefile.am  Makefile.mk  beaststart.c  bseshstart.c  suidmain.c  suidmain.h
plugins/: .cvsignore  ChangeLog  Makefile.am  Makefile.mk  Makefile.plugins  artscompressor.cc  artscompressor.idl  bseadder.c  bseadder.cc  bseadder.h  bseadder.hh  bseamplifier.cc  bseamplifier.idl  bseatandistort.c  bseatandistort.cc  bseatandistort.h  bseatandistort.hh  bsebalance.cc  bsebalance.idl  bseblockutils.cc  bsecapture.c  bsecapture.h  bsecompressor.c  bsecompressor.h  bseconstant.c  bseconstant.h  bsecontribsampleandhold.cc  bsecontribsampleandhold.idl  bsefirfilter.c  bsefirfilter.h  bsefirfilter.hh  bsegenosc.c  bsegenosc.h  bseiirfilter.c  bseiirfilter.cc  bseiirfilter.h  bseiirfilter.hh  bseloopback.c  bseloopback.h  bsemixer.c  (+75 more)
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.am  Makefile.intltool  Makefile.mk  POTFILES.in  POTFILES.skip  POTIGNORE  POTSCAN  POTSKIP  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  hr.po  intltool-merge  intltool-scm-35.diff  intltool-scm.diff  it.po  ja.po  mn.po  nb.po  ne.po  nl.po  oc.po  pa.po  pt.po  pt_BR.po  (+13 more)
sfi/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.mk  TODO  backtrace.cc  backtrace.hh  bcore.cc  bcore.hh  blob.cc  bse-plugin-generator.cc  cxxaux.hh  entropy.cc  formatter.hh  gbsearcharray.h  (+169 more)
(+1082 files in other folders)
